--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="duration_labal_infinite">Forever</string>
     <string name="setting_summary_flashlight">Turn on flashlight when alert goes off</string>
     <string name="setting_summary_vibrate">Phone vibrates when alert goes off</string>
+    <string name="about_this_app">About this app</string>
+    <string name="test_alert">Test Alert</string>
 </resources>
