--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="setting_title_ringtone">Ringtone</string>
+    <string name="setting_title_ringtone">Alert Tone</string>
     <string name="setting_title_duration">Duration</string>
     <string name="connected">Connected</string>
     <string name="title_no_devices">No devices found</string>
@@ -25,4 +25,5 @@
     <string name="setting_summary_vibrate">Phone vibrates when alert goes off</string>
     <string name="about_this_app">About this app</string>
     <string name="test_alert">Test Alert</string>
+    <string name="stop">Stop!</string>
 </resources>
