Error handling & UI updates for wear app

--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Wears My Phone</string>
+    <string name="error_message_no_nodes">No connected devices</string>
+    <string name="error_message_play_services">Error connecting</string>
 </resources>
